Changed some CSS styles in the CV Status page.

--- a/Career-Pulse/src/Components/Team_files/Vinuji-fe/CVStatusPage.css
+++ b/Career-Pulse/src/Components/Team_files/Vinuji-fe/CVStatusPage.css
@@ -7,7 +7,7 @@ margin-top: 20px;
 
 th, td {
 padding: 12px;
-border: 1px solid #ddd;
+border: 2px solid black;
 }
 
 th {
@@ -15,14 +15,18 @@ background-color: #f2f2f2;
 }
 
 select {
-padding: 8px;
+padding: 15px;
 font-size: 14px;
+width: 250px;
+border: 2px solid black;
 }
 
 button {
 padding: 8px;
 font-size: 14px;
 cursor: pointer;
+border: 2px solid black;
+color:blue;
 }
 
 
