--- a/Career-Pulse/src/pages/CVStatus.css
+++ b/Career-Pulse/src/pages/CVStatus.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: url("../images/cvstats.jpg");
+    background-image: url("../images/cvstatus.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment:fixed;
