--- a/Career-Pulse/src/pages/Signup_Login.css
+++ b/Career-Pulse/src/pages/Signup_Login.css
@@ -3,12 +3,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 120vh;
+    justify-content: center;
+  }
+  h2{
+    font-size: 22px;
+    font-weight: bold;
+    padding-bottom: 20px;
+    
   }
   
   .switch-buttons {
     display: flex;
     margin-bottom: 20px;
+    overflow: auto;
   }
   
   .switch-buttons button {
@@ -19,6 +27,7 @@
     background-color: #3498db;
     color: #fff;
     font-size: 14px;
+    border-radius: 50px;
   }
   
   .switch-buttons button:hover {
@@ -31,11 +40,15 @@
   }
   
   .signup-form {
-    width: 300px;
+    width: 370px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    flex-direction: column; 
+    align-items: center; 
+    
+    
   }
   .signup-form-container {
     display: flex;
@@ -69,44 +82,56 @@
     button.submitbutton{
     width: 100%;
     padding: 10px;
-    background-color: black;
+    background-color: #3498db;
     color: #fff;
     border: none;
     border-radius: 50px;
     cursor: pointer;
     margin-right: 8px;
+    
   }
   
   button:hover {
     background-color: #2980b9;
   }
   .google-signin-container {
-    margin-top: 16px;
+    margin-top: 20px;
   }
   
   .google-signin-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    padding: 10px;
+    height: 40px;
     background-color: #b8b9b9;
     color: black;
     border: none;
     border-radius: 50px;
     cursor: pointer;
+    text-align: center;
+    
+    
   }
   .google-signin-icon {
     width: 20px; 
     height: 20px; 
-    margin-right: 10px; 
+    
+    
     
   }
   
   .google-signin-button:hover {
     background-color: #acacac;
   }
+  p{
+    padding-top: 10px;
+  }
   
   @media screen and (max-width: 786px) {
     .signup-form {
       width: 80%;
     }
+    
   }
   
