--- a/Career-Pulse/src/Components/HeaderContent/MenuLink/MenuLink.css
+++ b/Career-Pulse/src/Components/HeaderContent/MenuLink/MenuLink.css
@@ -34,7 +34,8 @@
     color:black;
   }
   .navMenu {
-    display: grid;
+    display: flex;
+    align-items: center;
     grid-template-columns: repeat(5, auto);
     grid-gap: 10px;
     list-style: none;
@@ -149,15 +150,15 @@
       margin: 2rem auto;
       border-radius: 4px;
       width: 80%;
-      background: #1888ff;
+      background: #ffffff;
       text-decoration: none;
-      color: #fff;
+      color: #000000;
       font-size: 1.5rem;
     }
   
     .navigateLinksMobile:hover {
       background: #fff;
-      color: #1888ff;
+      color: #000000;
       transition: 250ms;
     }
   
