did some css changes

--- a/Career-Pulse/src/pages/Profile.css
+++ b/Career-Pulse/src/pages/Profile.css
@@ -49,10 +49,10 @@
 
 }
 
-.userProfileImg p {
+/* .userProfileImg p {
     color: gray;
 
-}
+} */
 
 .userProfileBio {
     height: 30%;
@@ -98,7 +98,7 @@
     background-color: #4964ff;
     border-radius: 7px;
     border: none;
-    color: white;
+    /* color: white; */
 
 }
 
@@ -119,6 +119,8 @@
     border-radius: 5px;
     background-color: transparent;
 }
+
+
 
 @media screen and (max-width: 768px) {
     .userProfileCont {
