Add company edit button

--- a/Career-Pulse/src/pages/Company.css
+++ b/Career-Pulse/src/pages/Company.css
@@ -90,7 +90,7 @@
     padding-left: 30px;
 }
 
-.updateButton {
+.editButton {
     padding: 10px 20px;
     height: auto;
     background-color: #4964ff;
