--- a/Career-Pulse/src/pages/Signup_Login.css
+++ b/Career-Pulse/src/pages/Signup_Login.css
@@ -51,12 +51,12 @@
     
     
   }
-  .signup-form-container {
+  /* .signup-form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
-  }
+  } */
   
   
   label {
