change colors of the webpage and  add some images for the home page

--- a/Career-Pulse/src/Components/FooterContent/Footer.css
+++ b/Career-Pulse/src/Components/FooterContent/Footer.css
@@ -1,10 +1,5 @@
 footer{
-    position: relative;
-    width: 100%;
-    background: #b240d4;
-    min-height: 250px;
-    padding: 20px 50px;
-    color: black;
+    background-color: black;
 }
 
 /* #footercontent{
