--- a/Career-Pulse/src/Components/Team_files/Vinuji-fe/JobList.css
+++ b/Career-Pulse/src/Components/Team_files/Vinuji-fe/JobList.css
@@ -16,12 +16,13 @@
       width: calc(25% - 20px); 
       height: auto;
       box-sizing: border-box;
-      background-color:lightyellow
+      background-color:rgb(45 85 75)
     }
     
     .apply-button {
-      background-color:blue;
-      color: white;
+      margin-top: 20px;
+      background-color:rgb(255, 255, 255);
+      color: rgb(0, 0, 0);
       border: none;
       padding: 0 10px 3px 10px;
       border-radius: 100px;
@@ -29,6 +30,7 @@
     }
     
     .apply-button:hover {
-      background-color:blue;
+      background-color: rgb(0, 0, 0);
+      color: rgb(255, 255, 255);
     }
     
