--- a/Career-Pulse/src/Components/HeaderContent/MenuLink/MenuLink.css
+++ b/Career-Pulse/src/Components/HeaderContent/MenuLink/MenuLink.css
@@ -1,5 +1,5 @@
 .navigationbar {
-    background: linear-gradient(90deg, rgb(250, 166, 239) 0%, rgb(26, 23, 23) 100%);
+    background: linear-gradient(90deg, rgb(59, 59, 59) 0%, rgb(180, 180, 180) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -11,7 +11,7 @@
   }
   
   .navbar-logo {
-    color: rgb(156, 10, 156);
+    color: rgb(255, 255, 255);
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
@@ -19,7 +19,7 @@
     font-size: 2rem;
   }
   .navbar-logo:hover{
-    color: #fff;
+    color: rgb(0, 0, 0);
 
   }
   
@@ -59,7 +59,7 @@
   }
   
   .navgateLinks:hover {
-    background-color: purple;
+    background-color: rgb(0, 0, 0);
     border-radius: 4px;
     transition: all 0.2s ease-out;
   }
