--- a/Career-Pulse/src/pages/VacancyHero.css
+++ b/Career-Pulse/src/pages/VacancyHero.css
@@ -1,4 +1,4 @@
-.hero2{
+/* .hero2{
     width: 100%;
     height: 100vh;
     position: relative;
@@ -6,4 +6,4 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment:fixed;
-}
+} */
