update some css

--- a/Career-Pulse/src/Components/Team_files/Vinuji-fe/JobList.css
+++ b/Career-Pulse/src/Components/Team_files/Vinuji-fe/JobList.css
@@ -16,7 +16,7 @@
       width: calc(25% - 20px); 
       height: auto;
       box-sizing: border-box;
-      background-color:rgb(45 85 75)
+      background-color:rgb(41, 51, 68)
     }
     
     .apply-button {
