update some css

--- a/Career-Pulse/src/Components/Team_files/Yasiru-FE/CompanyProfileContent/JobCard.css
+++ b/Career-Pulse/src/Components/Team_files/Yasiru-FE/CompanyProfileContent/JobCard.css
@@ -4,7 +4,10 @@
     background-color: white;
     color: black;
     font-size: 15px;
-    margin-top: 10px;
+    font-weight: bold;
+    margin-top: 30px;
+    height: 40px;
+    width: 150px;
     padding: 1px 10px;
     border: 2px solid rgb(122, 116, 221);
     border-bottom-width: 4px;
@@ -14,4 +17,5 @@
 
 .button1:hover {
     transform: scale(1.08);
+    background-color: brown;
 }
