--- a/Career-Pulse/src/pages/Profile.css
+++ b/Career-Pulse/src/pages/Profile.css
@@ -83,7 +83,7 @@
     display: grid;
     grid-template-columns: auto auto;
 }
-.editButtonCont {
+.updateButtonCont {
     position: relative;
     width: 100%;
     height: 20%;
@@ -99,7 +99,7 @@
     background-color: #4964ff;
     border-radius: 7px;
     border: none;
-    /* color: white; */
+    
 
 }
 
@@ -109,7 +109,7 @@
     justify-content: center;
     align-items: flex-start;
     padding: 20px;
-    /* border: 1px solid black; */
+    
 }
 
 .infoTextCont input, select {
