--- a/Career-Pulse/src/Components/Team_files/Yasiru-FE/CompanyProfileContent/JobCard.css
+++ b/Career-Pulse/src/Components/Team_files/Yasiru-FE/CompanyProfileContent/JobCard.css
@@ -19,3 +19,26 @@
     transform: scale(1.08);
     background-color: brown;
 }
+
+/* Adjust styles for floating button */
+.floating-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    /* font-weight: bold; */
+    font-size: 20px;
+    background-color: #aa9300;
+    color: white;
+    padding: 12px 24px;
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.9);
+    transition: transform 0.3s ease;
+  }
+  
+  .floating-button:hover {
+    background-color: #5a12e8;
+    transform: scale(1.1);    
+  }
+  
+
