--- a/Career-Pulse/src/Components/Team_files/Vinuji-fe/JobList.css
+++ b/Career-Pulse/src/Components/Team_files/Vinuji-fe/JobList.css
@@ -1,7 +1,6 @@
 .job-list-container {
-  margin-top: 25px;
   display: flex;
-  justify-content: space-evenly; /* Use space-evenly to distribute space around items */
+  justify-content: space-evenly;
   align-items: flex-start;
   flex-wrap: wrap;
   padding: 0 10px;
@@ -11,7 +10,7 @@
   border: 2px solid #ccc;
   border-radius: 10px;
   padding: 10px;
-  margin: 5px 10px;  /* Reduce bottom margin to reduce white space */
+  margin: 5px 10px;  
   width: calc(25% - 20px); 
   height: auto;
   box-sizing: border-box;
@@ -19,7 +18,6 @@
 }
 
 .apply-button {
-  margin-top: 20px; /* Adjust margin-top if needed */
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   border: none;
@@ -37,7 +35,6 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  /* font-weight: bold; */
   font-size: 20px;
   background-color: #aa9300;
   color: white;
