add a common profile picture to the profile page and add css for the company signup

--- a/Career-Pulse/src/Components/HomeAni.css
+++ b/Career-Pulse/src/Components/HomeAni.css
@@ -10,7 +10,7 @@
 
 .heroImg h2{
     font-size: 15vh;
-    margin-bottom: 0;
+    /* margin-bottom: 0; */
     color: #ac8484;
     display: flex;
     text-align: center;
@@ -20,8 +20,8 @@
 
 .heroImg h3{
     font-size: 7vh;
-    margin-top: 0;
-    margin-bottom: 0;
+    /* margin-top: 0;
+    margin-bottom: 0; */
     color: #ffffff;
     display: flex;
     text-align: center;
