--- a/Career-Pulse/src/pages/CVStatus.css
+++ b/Career-Pulse/src/pages/CVStatus.css
@@ -1,4 +1,4 @@
-.hero{
+/* .hero{
     width: 100%;
     height: 100vh;
     position: relative;
@@ -10,4 +10,4 @@
 
 .table{
     margin-bottom: 20px;
-}
+} */
